# neural-network

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile.sh  main.cpp
cmake/: CMakeLists.txt  googletest-download.cmake  googletest.cmake  libpng-download.cmake  libpng.cmake
lib/: CMakeLists.txt
lib/matrix/: CMakeLists.txt
lib/matrix/include/Matrix/: Exceptions.hpp  Matrix.hpp  Operator.hpp  Utils.hpp  Vector.hpp
lib/matrix/src/: Exceptions.cpp  Matrix.cpp  Operator.cpp  Utils.cpp  Vector.cpp
lib/tests/: CMakeLists.txt
lib/tests/matrix/: CMakeLists.txt  TestMatrix.cpp  TestOperator.cpp  TestUtils.cpp  TestVector.cpp  main.cpp
src/: CMakeLists.txt  Image.cpp  Image.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Neuron.cpp  Neuron.h  Png.cpp  Png.h  Support.cpp  Support.h  Training.cpp  Training.h  image.cpp  image.h  layer.cpp  layer.h  matrix.h  model.cpp  model.h  network.cpp  network.h  neuron.cpp  neuron.h  support.cpp  support.h
src/Image/: CMakeLists.txt
src/Image/include/: image.h
src/Image/src/: image.cpp
src/Matrix/: CMakeLists.txt
src/Matrix/src/: matrix.cpp
src/Network/: CMakeLists.txt
src/Network/include/: network.h
src/Network/src/: network.cpp
src/support/: math.cpp  math.h
